--- a/me/package.json
+++ b/me/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
